--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -4,131 +4,82 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/fondo_hbo">
+    android:background="@drawable/fondo_hbo"
+    tools:context=".InicioActivity"
+    tools:ignore="MissingClass">
+
+
+    <Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="413dp"
+        android:layout_height="80dp"
+        android:background="@drawable/fondo_hbo"
+        app:titleTextColor="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+    </Toolbar>
+
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="227dp"
-        android:layout_height="72dp"
-        android:layout_marginTop="32dp"
-        android:src="@mipmap/hbo_max_logo_black"
+        android:layout_width="175dp"
+        android:layout_height="99dp"
+        app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/toolbar"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@mipmap/hbo_max_logo_black" />
 
-
-    <ScrollView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <HorizontalScrollView
+        android:id="@+id/horizontalScrollView"
+        android:layout_width="404dp"
+        android:layout_height="271dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.6"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="25dp">
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        tools:ignore="MissingConstraints">
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/pelicula2"
-                android:layout_width="377dp"
-                android:layout_height="204dp"
-                android:alpha="0.3"
+                android:layout_width="378dp"
+                android:layout_height="match_parent"
+                android:alpha="0.8"
                 android:src="@mipmap/pelicula2"
                 tools:layout_editor_absoluteX="125dp"
                 tools:layout_editor_absoluteY="457dp" />
+
             <ImageView
                 android:id="@+id/pelicula1"
                 android:layout_width="377dp"
-                android:layout_height="204dp"
-                android:alpha="0.3"
-                android:src="@mipmap/pelicula2"
+                android:layout_height="match_parent"
+                android:alpha="0.8"
+                android:src="@mipmap/pelicula6"
                 tools:layout_editor_absoluteX="125dp"
                 tools:layout_editor_absoluteY="457dp" />
+
             <ImageView
                 android:id="@+id/pelicula3"
                 android:layout_width="377dp"
-                android:layout_height="204dp"
-                android:alpha="0.3"
-                android:src="@mipmap/pelicula2"
-                tools:layout_editor_absoluteX="125dp"
-                tools:layout_editor_absoluteY="457dp" />
-            <ImageView
-                android:id="@+id/pelicula4"
-                android:layout_width="377dp"
-                android:layout_height="204dp"
-                android:alpha="0.3"
-                android:src="@mipmap/pelicula2"
-                tools:layout_editor_absoluteX="125dp"
-                tools:layout_editor_absoluteY="457dp" />
-            <ImageView
-                android:id="@+id/pelicula5"
-                android:layout_width="377dp"
-                android:layout_height="204dp"
-                android:alpha="0.3"
-                android:src="@mipmap/pelicula2"
-                tools:layout_editor_absoluteX="125dp"
-                tools:layout_editor_absoluteY="457dp" />
-            <ImageView
-                android:id="@+id/pelicula6"
-                android:layout_width="377dp"
-                android:layout_height="204dp"
-                android:alpha="0.3"
-                android:src="@mipmap/pelicula2"
-                tools:layout_editor_absoluteX="125dp"
-                tools:layout_editor_absoluteY="457dp" />
-            <ImageView
-                android:id="@+id/pelicula7"
-                android:layout_width="377dp"
-                android:layout_height="204dp"
-                android:alpha="0.3"
-                android:src="@mipmap/pelicula2"
-                tools:layout_editor_absoluteX="125dp"
-                tools:layout_editor_absoluteY="457dp" />
-            <ImageView
-                android:id="@+id/pelicula8"
-                android:layout_width="377dp"
-                android:layout_height="204dp"
-                android:alpha="0.3"
-                android:src="@mipmap/pelicula2"
-                tools:layout_editor_absoluteX="125dp"
-                tools:layout_editor_absoluteY="457dp" />
-            <ImageView
-                android:id="@+id/pelicula9"
-                android:layout_width="377dp"
-                android:layout_height="204dp"
-                android:alpha="0.3"
-                android:src="@mipmap/pelicula2"
-                tools:layout_editor_absoluteX="125dp"
-                tools:layout_editor_absoluteY="457dp" />
-            <ImageView
-                android:id="@+id/pelicula10"
-                android:layout_width="377dp"
-                android:layout_height="204dp"
-                android:alpha="0.3"
-                android:src="@mipmap/pelicula2"
-                tools:layout_editor_absoluteX="125dp"
-                tools:layout_editor_absoluteY="457dp" />
-            <ImageView
-                android:id="@+id/pelicula11"
-                android:layout_width="377dp"
-                android:layout_height="204dp"
-                android:alpha="0.3"
-                android:src="@mipmap/pelicula2"
+                android:layout_height="match_parent"
+                android:alpha="0.8"
+                android:src="@mipmap/pelicula3"
                 tools:layout_editor_absoluteX="125dp"
                 tools:layout_editor_absoluteY="457dp" />
 
 
         </LinearLayout>
 
-
-    </ScrollView>
-
-
-
-
-
+    </HorizontalScrollView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
