--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -96,7 +96,22 @@
 
     </HorizontalScrollView>
 
+    <ScrollView
+        android:layout_width="412dp"
+        android:layout_height="237dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" >
 
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Destacados"
+            android:textColor="@color/white"
+            android:paddingLeft="15dp"
+            android:textSize="18dp"/>
+    </ScrollView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
