--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -35,7 +35,7 @@
         app:srcCompat="@mipmap/hbo_max_logo_black" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/imagenPerfil"
         android:layout_width="75dp"
         android:layout_height="72dp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
@@ -44,7 +44,7 @@
         app:layout_constraintStart_toEndOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.296"
-        app:srcCompat="@drawable/ic_launcher_background" />
+        app:srcCompat="@mipmap/perfil1" />
 
     <HorizontalScrollView
         android:id="@+id/horizontalScrollView"
@@ -56,7 +56,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
         tools:ignore="MissingConstraints">
-
 
 
         <LinearLayout
@@ -96,22 +95,96 @@
 
     </HorizontalScrollView>
 
-    <ScrollView
-        android:layout_width="412dp"
-        android:layout_height="237dp"
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="414dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="8dp"
+        android:paddingLeft="15dp"
+        android:text="Destacados"
+        android:textColor="@color/white"
+        android:textSize="18dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />
+
+    <HorizontalScrollView
+        android:id="@+id/horizontalScrollView2"
+        android:layout_width="401dp"
+        android:layout_height="174dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" >
+        app:layout_constraintTop_toBottomOf="@+id/textView6">
 
-        <TextView
-            android:id="@+id/textView6"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Destacados"
-            android:textColor="@color/white"
-            android:paddingLeft="15dp"
-            android:textSize="18dp"/>
-    </ScrollView>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/imageView4"
+                android:layout_width="170dp"
+                android:layout_height="match_parent"
+                app:srcCompat="@mipmap/peliculaquaman" />
+
+            <ImageView
+                android:id="@+id/imageView5"
+                android:layout_width="139dp"
+                android:layout_height="match_parent"
+                app:srcCompat="@mipmap/pelicula_el_test" />
+
+            <ImageView
+                android:id="@+id/imageView6"
+                android:layout_width="160dp"
+                android:layout_height="match_parent"
+                app:srcCompat="@mipmap/pelicula_dune" />
+
+            <ImageView
+                android:id="@+id/imageView7"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                app:srcCompat="@mipmap/serie_riverdale" />
+
+        </LinearLayout>
+
+
+    </HorizontalScrollView>
+
+
+    <ImageView
+        android:id="@+id/imagenCasa"
+        android:layout_width="140dp"
+        android:layout_height="75dp"
+        android:background="#181818"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView2"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@mipmap/casa" />
+
+    <ImageView
+        android:id="@+id/imagePeli"
+        android:layout_width="146dp"
+        android:layout_height="75dp"
+        android:background="#16191A"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imagenCasa"
+        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView2"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@mipmap/claqueta_cine" />
+
+    <ImageView
+        android:id="@+id/imageTele"
+        android:layout_width="124dp"
+        android:layout_height="76dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/imagePeli"
+        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView2"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@mipmap/televisor" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
