--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -73,7 +73,7 @@
         android:id="@+id/BotonIniciaSesion"
         android:layout_width="154dp"
         android:layout_height="47dp"
-        android:layout_marginBottom="408dp"
+        android:layout_marginTop="16dp"
         android:backgroundTint="#322C4C"
         android:elevation="2dp"
         android:shadowColor="#5C5C5C"
@@ -82,12 +82,10 @@
         android:textSize="14dp"
         android:textStyle="bold"
         app:cornerRadius="5dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.14"
+        app:layout_constraintHorizontal_bias="0.186"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/contraseña"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@+id/contraseña" />
 
     <TextView
         android:id="@+id/olvidado_pass"
