--- a/app/src/main/res/layout/activity_loging.xml
+++ b/app/src/main/res/layout/activity_loging.xml
@@ -20,7 +20,7 @@
         android:id="@+id/textView3"
         android:layout_width="297dp"
         android:layout_height="23dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="4dp"
         android:text="Crea tu cuenta"
         android:textAlignment="center"
         android:textColor="@color/white"
@@ -42,21 +42,51 @@
         app:layout_constraintHorizontal_bias="0.671"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
+    <ImageView
+        android:id="@+id/imagePerfil1"
+        android:layout_width="147dp"
+        android:layout_height="118dp"
+        app:layout_constraintBottom_toTopOf="@+id/Nombre"
+        app:layout_constraintEnd_toStartOf="@+id/BotonSiguiente"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        app:srcCompat="@drawable/ic_launcher_background"
+        tools:srcCompat="@drawable/ic_launcher_background" />
+
+    <Button
+        android:id="@+id/BotonSiguiente"
+        android:layout_width="59dp"
+        android:layout_height="36dp"
+        android:layout_marginTop="58dp"
+        android:layout_marginEnd="76dp"
+        android:backgroundTint="#322C4C"
+        android:elevation="2dp"
+        android:shadowColor="#5C5C5C"
+        android:text=">"
+        android:textColor="@color/white"
+        android:textSize="15dp"
+        android:textStyle="bold"
+        app:cornerRadius="5dp"
+        app:layout_constraintBottom_toTopOf="@+id/Nombre"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        app:layout_constraintVertical_bias="0.0" />
 
     <EditText
         android:id="@+id/Nombre"
         android:layout_width="303dp"
         android:layout_height="49dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="136dp"
         android:background="@drawable/edit_text_borde"
         android:hint="Nombre"
-        android:textColor="@color/white"
         android:inputType="text"
         android:paddingLeft="15dp"
         android:paddingRight="15dp"
+        android:textColor="@color/white"
         android:textColorHint="#878787"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.537"
+        app:layout_constraintHorizontal_bias="0.472"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4"></EditText>
 
@@ -64,16 +94,15 @@
         android:id="@+id/Apellido"
         android:layout_width="303dp"
         android:layout_height="49dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/edit_text_borde"
         android:hint="Apellido"
-        android:textColor="@color/white"
         android:inputType="text"
         android:paddingLeft="15dp"
         android:paddingRight="15dp"
+        android:textColor="@color/white"
         android:textColorHint="#878787"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.537"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Nombre"></EditText>
 
@@ -81,16 +110,16 @@
         android:id="@+id/Correo"
         android:layout_width="303dp"
         android:layout_height="49dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/edit_text_borde"
         android:hint="Correo electrónico"
         android:inputType="textEmailAddress"
-        android:textColor="@color/white"
         android:paddingLeft="15dp"
         android:paddingRight="15dp"
+        android:textColor="@color/white"
         android:textColorHint="#878787"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.527"
+        app:layout_constraintHorizontal_bias="0.537"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Apellido"></EditText>
 
@@ -98,13 +127,13 @@
         android:id="@+id/ContraseñaLog"
         android:layout_width="303dp"
         android:layout_height="49dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/edit_text_borde"
         android:hint="Contraseña"
         android:inputType="textPassword"
-        android:textColor="@color/white"
         android:paddingLeft="15dp"
         android:paddingRight="15dp"
+        android:textColor="@color/white"
         android:textColorHint="#878787"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.527"
@@ -147,21 +176,24 @@
         android:id="@+id/BotonInicioSesion"
         android:layout_width="154dp"
         android:layout_height="47dp"
-        android:layout_marginBottom="96dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="36dp"
         android:backgroundTint="#322C4C"
         android:elevation="2dp"
         android:shadowColor="#5C5C5C"
-        android:text="Inicio Sesión"
+        android:text="Atrás"
         android:textColor="@color/white"
         android:textSize="14dp"
         android:textStyle="bold"
         app:cornerRadius="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.514"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/BotonCrearCuent"
         app:layout_constraintTop_toBottomOf="@+id/textView5"
-        app:layout_constraintVertical_bias="0.978" />
+        app:layout_constraintVertical_bias="0.0" />
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
