--- a/app/src/main/res/layout/activity_loging.xml
+++ b/app/src/main/res/layout/activity_loging.xml
@@ -47,7 +47,7 @@
         android:layout_width="147dp"
         android:layout_height="118dp"
         app:layout_constraintBottom_toTopOf="@+id/Nombre"
-        app:layout_constraintEnd_toStartOf="@+id/BotonSiguiente"
+        app:layout_constraintEnd_toStartOf="@+id/botonSiguiente"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4"
@@ -55,7 +55,7 @@
         tools:srcCompat="@drawable/ic_launcher_background" />
 
     <Button
-        android:id="@+id/BotonSiguiente"
+        android:id="@+id/botonSiguiente"
         android:layout_width="59dp"
         android:layout_height="36dp"
         android:layout_marginTop="58dp"
@@ -173,7 +173,7 @@
         app:layout_constraintVertical_bias="0.118" />
 
     <Button
-        android:id="@+id/BotonInicioSesion"
+        android:id="@+id/atras"
         android:layout_width="154dp"
         android:layout_height="47dp"
         android:layout_marginStart="24dp"
